--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,13 +1,15 @@
 $main-color: #5b3e66;
 $complimentary-color: rgba(76,116,106, .6);
-
+body {
+  color: $main-color;
+}
 .container {
   background-image: url(../../img/lavender.jpg);
-  background-repeat: no-repeat;
+  background-repeat: repeat-y;
   background-position: center;
   background-size: cover;
   height: 100vh;
-  margin: 80px;
+  margin: 15px auto 5px;
   border-radius: 10px;
   color: $main-color;
   text-align: center;
@@ -18,21 +20,19 @@ $complimentary-color: rgba(76,116,106, .6);
   }
   h1 {
     margin-top: 70px;
-    font-size: 4em;
+    font-size: 6em;
   }
   h3 {
     margin-top: 15px;
-    font-size: 2.5em;
+    font-size: 3em;
   }
   h4 {
-    margin-top: 40px;
-    font-size: 1.5em;
+    margin-top: 110px;
+    font-size: 2em;
   }
 
-
-
   form {
-    width: 40%;
+    width: 50%;
     margin: auto;
     button {
       margin-top: 10px;
@@ -54,16 +54,21 @@ $complimentary-color: rgba(76,116,106, .6);
         border-color: $complimentary-color;
       }
     }
-    input {
-      color: $main-color;
-    }
+
     input:focus {
       border-color: rgba(76,116,106, .9);
+
     }
   }
+}
 
-  ul {
-    list-style: none;
+#listOfDocs {
+  list-style: none;
+  padding: 0;
+  li {
+    margin: 10px auto;
+    clear: both;
+    width: 50%;
+    border-radius: 5px;
   }
-
 }
